[gd_scene load_steps=3 format=3 uid="uid://dm1eobnwsijsk"]

[ext_resource type="Script" uid="uid://btf3qwfympob1" path="res://scripts/main_menu.gd" id="1_l6cm7"]

[sub_resource type="LabelSettings" id="LabelSettings_rhts7"]
font_size = 40

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l6cm7")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 377.0
offset_bottom = 177.0
text = "THE AMAZING
GREGTECH QUIZ"
label_settings = SubResource("LabelSettings_rhts7")

[node name="Buttons" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = 64.0
offset_top = 192.0
offset_right = 144.0
offset_bottom = 304.0

[node name="StartButton" type="Button" parent="Buttons"]
layout_mode = 0
offset_right = 78.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 30
text = "Start"

[node name="QuitButton" type="Button" parent="Buttons"]
layout_mode = 0
offset_top = 64.0
offset_right = 71.0
offset_bottom = 114.0
theme_override_font_sizes/font_size = 30
text = "Quit"

[node name="Progress" type="Control" parent="."]
anchors_preset = 0
offset_left = 64.0
offset_top = 552.0
offset_right = 600.0
offset_bottom = 624.0

[node name="ProgressBar" type="ProgressBar" parent="Progress"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.015000001
anchor_top = 0.54700005
anchor_right = 0.9850001
anchor_bottom = 0.92200005
offset_left = -0.03999996
offset_top = -0.008003235
offset_right = 0.039978027
offset_bottom = -0.008003235
grow_horizontal = 2
grow_vertical = 2

[node name="ProgressLabel" type="Label" parent="Progress"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.015000001
anchor_top = 0.11100001
anchor_right = 0.37300003
anchor_bottom = 0.43100002
offset_left = -0.03999996
offset_top = 0.00799942
offset_right = -0.92800903
offset_bottom = -0.032001495
text = "Parsing questions: [c]/[a]"
